TAG: strainload-6-0-4-1
DATE: 04/28/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"
3) tested using htmpload/lacz

TAG: strainload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES: TR11750
1) strainKOMPload.py
updated for Postgres; strainload.py & strainallelelload.py will also need to
be done, when they are needed

TAG: strainload-5-1-9-1
DATE: 08/28/2014
STAFF: sc
CHANGES: TR11775
1) strainload.py - update strain type query to use _Vocab_key 55
2) strainKOMPload.py - ditto

TAG: strainload-5-1-8-1
DATE: 04/09/2014
STAFF: lec
CHANGES: TR11623/EMMA strains

TAG: strainload-5-1-4-6
TAG: strainload-5-1-4-5
TAG: strainload-5-1-4-4
TAG: strainload-5-1-4-3
TAG: strainload-5-1-4-2
DATE: 10/18/2013
STAFF: lec
CHANGES: TR11490; fix TR11247/geneticBackground bug

TAG: strainload-5-1-4-1
DATE: 08/02/2013
STAFF: lec
CHANGES: TR11247/add geneticBackground

TAG: strainload-5-1-2-3
TAG: strainload-5-1-2-2
TAG: strainload-5-1-2-1
TAG: strainload-5-1-1-1
DATE: 01/03/2013, 01/08/2013, 03/20/2013
STAFF: lec
CHANGES: TR11253/KOMP Strains

TAG: strainload-5-1-0-1
DATE: 09/24/2012
STAFF: lec
CHANGES: TR11015/Gensat/MMRRC

TAG: strainload-4-4-1-7
TAG: strainload-4-4-1-6
DATE: 03/26/2012
STAFF: lec
CHANGES: TR11015/Gensat/MMRRC

TAG: strainload-4-4-1-5
TAG: strainload-4-4-1-4
TAG: strainload-4-4-1-3
TAG: strainload-4-4-1-2
DATE: 05/10/2011, 06/06/2011, 06/07/2011
STAFF: lec
CHANGES: TR10648/MMRRC

TAG: strainload-4-4-1-1
DATE: 12/28/2010
STAFF: lec
CHANGES: update .py wtih schema changes

TAG: strainload-3-5-1-4
DATE: 10/03/2006
STAFF: lec
CHANGES: TR7894; mgiconfig

TAG: strainload-3-5-1-3
DATE: 09/29/2006
STAFF: lec
CHANGES: TR7894; mgiconfig

TAG: strainload-3-5-1-2
TAG: strainload-3-5-1-1
DATE: 09/28/2006
STAFF: lec
CHANGES: TR7894; mgiconfig

TAG: strainload-3-4-3-3
TAG: strainload-3-4-3-2
TAG: strainload-3-4-3-1
DATE: 02/15/2006
STAFF: lec
CHANGES: New CVS repository
