@@ -1,5 +1,16 @@
+TAG: strainload-6-0-12-?
+DATE: 02/08/2018
+STAFF: lec
+CHANGES: TR12662/GMC/autosequence changes
+
+TAG: strainload-6-0-7-1
+DATE: 01/05/2017
+STAFF: lec 
+CHANGES:
+1) TR12069/obsolete db.setAutoTranslate()
+
 TAG: strainload-6-0-4-1
-DATE: 04/28/2016
+DATE: 04/29/2016
 STAFF: lec 
 CHANGES: TR12069/postgres cleanup
 1) convert to Git 
